----------------------

$Id$
$Source$

2004-10-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: there was already a tip icon in our collection,
      thanks to Michael Keck

2004-10-20 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.
    * tbl_relation.php: Backquote table name (bug #1050441).
    * db_details_qbe.php: Backquote table name.

2004-10-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: bug #1041667, correctly
      check the server version instead of the client API version
    * tbl_change.php, libraries/common.lib.php, lang/*: new function
      PMA_showHint($message), new $strUseTabKey,
      new light bulb image (temporary)
    * server_privileges.php: bug #916117, PMA_showHint($strEscapeWildcards)

2004-10-19 Michal Čihař  <michal@cihar.com>
    * export.php: Use just \n for SQL exports (bug #1042521).
    * libraries/read_dump.lib.php: Set correct return value (bug #1048861).
    * sql.php: Fix undefined index.
    * libraries/sqlparser.lib.php: Return raw query in case of error (bug
      #1048826).
    * main.php, queryframe.php: Handle correctly situation with no default
      server (bug #1049107).
    * tbl_create.php, libraries/common.lib.php: 0 as field name causes
      problems (bug #1042235).
    * read_dump.php, server_privileges.php, server_status.php, sql.php: Work
      better in ANSI mode (bug #816858).
    * lang/czech: Reordered some words.
    * libraries/select_server.lib.php: Clickable active server in left frame
      (RFE # 1044678).
    * db_details_structure.php, tbl_move_copy.php, libraries/common.lib.php:
      Fix left frame reloading after dropping table (bug #1034531).
    * config.inc.php, libraries/config_import.lib.php: Offer UNIX_TIMESTAMP
      also for numeric fields.
    * tbl_replace.php: UNIX_TIMESTAMP can take optional parameter (bug
      #1039193).
    * server_privileges.php: Make non-js checkall work also for adding new