@@ -13,6 +13,8 @@ $Source$
     * lang/czech: Update.
     * tbl_relation.php: Backquote table name (bug #1050441).
     * db_details_qbe.php: Backquote table name.
+    * libraries/display_tbl.lib.php: Comments now work for multi table selects
+      (bug #789647).
 
 2004-10-19 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/database_interface.lib.php: bug #1041667, correctly
